--- a/views/home.html
+++ b/views/home.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,300,400,500,700,900" rel="stylesheet">
 
-    <title>Zhirrr's Web</title>
+    <title>YasirPedia Web</title>
 <!--
 Elegance Template
 https://templatemo.com/tm-528-elegance
@@ -55,7 +55,7 @@ https://templatemo.com/tm-528-elegance
                                 <ul class="navigation-menu nav navbar-nav navbars" id="nav">
                                     <li data-menuanchor="slide01" class="active"><a href="#slide01">Home</a></li>
                                     <li data-menuanchor="slide02"><a href="/api"> My Rest API</a></li>
-                                    <li data-menuanchor="slide03"><a href="https://blog-zahirr-web.vercel.app/">My Blog</a></li>
+                                    <li data-menuanchor="slide03"><a href="https://www.yasir.my.id/">My Blog</a></li>
                                 </ul>
                             </div>
                         </nav>
@@ -74,8 +74,8 @@ https://templatemo.com/tm-528-elegance
                 <div class="section-inner">
                     <div class="welcome-box">
                         <span class="welcome-first animate" data-animate="fadeInUp">Hello, welcome to</span>
-                        <span class="welcome-title animate" data-animate="fadeInUp">Zhirrr's Web</span>
-                        <p class="animate" data-animate="fadeInUp">Zhirrr's Web menyajikan banyak sekali manfaat bagi kalian semua para Coders, mulai dari puluhan API Gratis, juga Informasi/Cara2 unik untuk Kalian !</p>
+                        <span class="welcome-title animate" data-animate="fadeInUp">YasirPedia Web</span>
+                        <p class="animate" data-animate="fadeInUp">YasirPedia Web menyajikan banyak sekali manfaat bagi kalian semua para Coders, mulai dari puluhan API Gratis, juga Informasi/Cara2 unik untuk Kalian !</p>
                         <div class="scroll-down next-section animate data-animate="fadeInUp""><img src="home/images/mouse-scroll.png" alt=""><span>Scroll Down</span></div>
                     </div>
                 </div>
